stoat/tests/snapshots/snapshots/snapshots__lsp____code_action_no_lsp.snap
---
source: stoat/tests/snapshots/lsp.rs
expression: app.snapshot_active()
---
[editor] pane=0 mode=normal flash="No file open"
  1:|fn main() {}
