stoat/tests/snapshots/snapshots/snapshots__lsp____workspace_symbol_picker_no_lsp.snap
---
source: stoat/tests/snapshots/lsp.rs
expression: app.snapshot_active()
---
[editor] pane=0 mode=normal flash="No workspace symbols found"
  1:|fn main() {}
